fix carousel gaps

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -24,10 +24,18 @@
   }
 
   solution-carousel ::ng-deep swiper-slide {
-    height: 610px;
+    height: 676px;
+
+    @media (max-width: 900px) {
+      height: 740px;
+    }
 
     @include breakpoints.sm-down {
-      height: 308px;
+      height: 684px;
+    }
+
+    @media (max-width: 450px) {
+      height: 358px;
     }
   }
 }
