--- a/src/app/share/components/carousel/carousel.component.scss
+++ b/src/app/share/components/carousel/carousel.component.scss
@@ -13,7 +13,6 @@
 
 swiper-slide {
   overflow: hidden;
-  // margin: 12px;
   height: 308px;
 
   img {
@@ -21,7 +20,7 @@ swiper-slide {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    margin: 0 24px;
+    // margin: 0 24px;
   }
 }
 
